--- a/templates/pybo/question_list.html
+++ b/templates/pybo/question_list.html
@@ -1,4 +1,3 @@
-
 {% extends 'pybo/base.html' %}
 
 {% block title %}
@@ -7,41 +6,42 @@
 
 {% block content %}
 
-<!--
-    forloop.counter	    for 문의 순서로 1부터 표시
-    forloop.counter0	for 문의 순서로 0부터 표시
-    forloop.first	    for 문의 첫 번째 순서인 경우 True
-    forloop.last	    for 문의 마지막 순서인 경우 True
--->
+    <!--
+        forloop.counter	    for 문의 순서로 1부터 표시
+        forloop.counter0	for 문의 순서로 0부터 표시
+        forloop.first	    for 문의 첫 번째 순서인 경우 True
+        forloop.last	    for 문의 마지막 순서인 경우 True
+    -->
 
-<div class="container my-3">
-    <table class="table">
-        <thead>
-        <tr class="thead-dark">
-            <th>번호</th>
-            <th>제목</th>
-            <th>작성일시</th>
-        </tr>
-        </thead>
-        <tbody>
-        <!-- context 로 받아온 question_list 가 존재하면 실행.-->
-        {% if question_list %}
-            {% for question in question_list %}
-                <tr>
-                    <td>{{ forloop.counter }}</td>
-                    <td>
-                        <!-- nameSpace:urlName-->
-                        <a href="{% url 'pybo:detail' question.id %}">{{ question.subject }}</a>
-                    </td>
-                    <td>{{ question.create_date }}</td>
-                </tr>
-            {% endfor %}
-        {% else %}
-            <tr>
-                <td colspan="3">질문이 없습니다.</td>
+    <div class="container my-3">
+        <table class="table">
+            <thead>
+            <tr class="thead-dark">
+                <th>번호</th>
+                <th>제목</th>
+                <th>작성일시</th>
             </tr>
-        {% endif %}
-        </tbody>
-    </table>
-</div>
+            </thead>
+            <tbody>
+            <!-- context 로 받아온 question_list 가 존재하면 실행.-->
+            {% if question_list %}
+                {% for question in question_list %}
+                    <tr>
+                        <td>{{ forloop.counter }}</td>
+                        <td>
+                            <!-- nameSpace:urlName-->
+                            <a href="{% url 'pybo:detail' question.id %}">{{ question.subject }}</a>
+                        </td>
+                        <td>{{ question.create_date }}</td>
+                    </tr>
+                {% endfor %}
+            {% else %}
+                <tr>
+                    <td colspan="3">질문이 없습니다.</td>
+                </tr>
+            {% endif %}
+            </tbody>
+        </table>
+        <a href="{% url 'pybo:question_create' %}" class="btn btn-primary">질문 등록하기</a>
+    </div>
 {% endblock %}
