--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -4,53 +4,74 @@
 
 {% block content %}
     <div class="container my-3">
-    <h2 class="border-bottom py-2">{{ question.subject }}</h2>
-
-    <div class="card my-3">
-        <div class="card-body">
-            <div class="card-text" style="white-space: pre-line;">{{ question.content }}</div>
-            <div class="d-flex justify-content-end">
-                <div class="badge badge-light p-2">
-                    {{ question.create_date }}
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <h5 class="border-bottom my-3 py-2">{{ question.answer_set.count }}개의 답변이 있습니다.</h5>
-    {% for answer in question.answer_set.all %}
+        <h2 class="border-bottom py-2">{{ question.subject }}</h2>
         <div class="card my-3">
             <div class="card-body">
-                <div class="card-text" style="white-space: pre-line;">{{ answer.content }}</div>
+                <div class="card-text" style="white-space: pre-line;">{{ question.content }}</div>
                 <div class="d-flex justify-content-end">
-                    <div class="badge badge-light p-2">
-                        {{ answer.create_date }}
+
+                    <div class="badge badge-light p-2 text-left">
+                        <div class="mb-2">{{ question.author.username }}</div>
+                        <div>{{ question.create_date }}</div>
+                    </div>
+                </div>
+
+                <!-- 게시글 수정 부분 -->
+                {% if request.user == question.author %}
+                    <div class="my-3">
+                        <a href="{% url 'pybo:question_modify' question.id %}"
+                           class="btn btn-sm btn-outline-secondary">수정</a>
+                    </div>
+                {% endif %}
+            <!-- 게시글 수정 부분 -->
+            </div>
+        </div>
+
+        <h5 class="border-bottom my-3 py-2">{{ question.answer_set.count }}개의 답변이 있습니다.</h5>
+
+        <!-- 댓글 리스트 출력 - 반복문 -->
+        {% for answer in question.answer_set.all %}
+            <div class="card my-3">
+                <div class="card-body">
+                    <div class="card-text" style="white-space: pre-line;">{{ answer.content }}</div>
+                    <div class="d-flex justify-content-end">
+                        <div class="badge badge-light p-2 text-left">
+                            <div class="mb-2">{{ answer.author.username }}</div>
+                            <div>{{ answer.create_date }}</div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        {% endfor %}
+        <!-- 댓글 리스트 출력 종료 -->
 
-    {% endfor %}
-    <form action="{% url 'pybo:answer_create' question.id %}" method="post" class="my-3">
-    {% csrf_token %}
-    <!-- 오류부분 시작 -->
-    {% if form.errors %}
-        <div class="alert alert-danger" role="alert">
-            {% for field in form %}
-                {% if field.errors %}
-                    <strong>{{ field.label }}</strong>
-                    {{ field.errors }}
-                {% endif %}
-            {% endfor %}
-        </div>
-    {% endif %}
-    <!-- 오류부분 종료 -->
+        <form action="{% url 'pybo:answer_create' question.id %}" method="post" class="my-3">
+            {% csrf_token %}
+            <!-- 오류부분 시작 -->
+            {% if form.errors %}
+                <div class="alert alert-danger" role="alert">
+                    {% for field in form %}
+                        {% if field.errors %}
+                            <strong>{{ field.label }}</strong>
+                            {{ field.errors }}
+                        {% endif %}
+                    {% endfor %}
+                </div>
+            {% endif %}
+            <!-- 오류부분 종료 -->
 
-        <div class="form-group">
-            <textarea name="content" id="content" class="form-control" rows="10"></textarea>
-        </div>
-        <input type="submit" value="답변등록" class="btn btn-primary">
-    </form>
+            <div class="form-group">
 
-</div>
+            <textarea {% if not user.is_authenticated %} disabled {% endif %}
+                                                         name="content" id="content" class="form-control"
+                                                         rows="10"></textarea>
+            </div>
+            {% if not user.is_authenticated %}
+                <a href="{% url 'common:login' %}" class="btn btn-primary">로그인</a>
+            {% else %}
+                <input type="submit" value="답변등록" class="btn btn-primary">
+            {% endif %}
+        </form>
+
+    </div>
 {% endblock %}
