--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -10,19 +10,26 @@
                 <div class="card-text" style="white-space: pre-line;">{{ question.content }}</div>
                 <div class="d-flex justify-content-end">
 
+                    {% if question.modify_date %}
+                        <div class="badge badge-light p-2 text-left mx-3">
+                            <div class="mb-2">modified at</div>
+                            <div>{{ question.modify_date }}</div>
+                        </div>
+                    {% endif %}
+
                     <div class="badge badge-light p-2 text-left">
                         <div class="mb-2">{{ question.author.username }}</div>
                         <div>{{ question.create_date }}</div>
                     </div>
                 </div>
 
-                <!-- 게시글 수정 부분 -->
 
                 <div class="my-3">
                     {% if request.user == question.author %}
+                        <!-- 게시글 수정 버튼 -->
                         <a href="{% url 'pybo:question_modify' question.id %}"
                            class="btn btn-sm btn-outline-secondary">수정</a>
-                        <!-- 게시글 수정 부분 -->
+                        <!-- 게시글 수정 버튼 -->
 
                         <!-- 게시글 삭제 버튼 -->
                         <a href="#" class="delete btn btn-sm btn-outline-secondary"
@@ -30,7 +37,6 @@
                         <!-- 게시글 삭제 버튼 -->
                     {% endif %}
                 </div>
-
             </div>
         </div>
 
@@ -42,11 +48,28 @@
                 <div class="card-body">
                     <div class="card-text" style="white-space: pre-line;">{{ answer.content }}</div>
                     <div class="d-flex justify-content-end">
+                        {% if answer.modify_date %}
+                            <div class="badge badge-light p-2 text-left mx-3">
+                                <div class="mb-2">modified at</div>
+                                <div>{{ answer.modify_date }}</div>
+                            </div>
+                        {% endif %}
+
                         <div class="badge badge-light p-2 text-left">
                             <div class="mb-2">{{ answer.author.username }}</div>
                             <div>{{ answer.create_date }}</div>
                         </div>
                     </div>
+                    {% if request.user == answer.author %}
+                        <div class="my-3">
+                            <!-- 답글 수정버튼 -->
+                            <a href="{% url 'pybo:answer_modify' answer.id %}"
+                               class="btn btn-sm btn-outline-secondary">수정</a>
+                            <!-- 답글 삭제버튼 -->
+                            <a href="#" class="delete btn btn-sm btn-outline-secondary "
+                               data-uri="{% url 'pybo:answer_delete' answer.id %}">삭제</a>
+                        </div>
+                    {% endif %}
                 </div>
             </div>
         {% endfor %}
@@ -81,4 +104,14 @@
         </form>
 
     </div>
+    <script>
+        $(function () {
+            $(".delete").click(function () {
+                if (confirm("정말로 삭제하시겠습니까?")) {
+                    location.href = $(this).data('uri');
+                }
+            });
+        });
+
+    </script>
 {% endblock %}
